--- a/app/assets/styles/modules/_section-title.css
+++ b/app/assets/styles/modules/_section-title.css
@@ -18,10 +18,16 @@
     margin-right: auto;
 
     @mixin atSmall {
+      position: relative;
+      top: 8px;
       margin-bottom: 0;
       margin-right: .5rem;
       margin-left: 0;
       display: inline-block;
     }
+  }
+
+  &--blue {
+    color: $main-blue;
   }
 }
